// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`clueMap rendering 1`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      before 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        baz BOOM foo BAM 
        <span
          data-hidden="true"
          role="button"
          tabindex="0"
        >
           not! 
        </span>
         fooey
      </span>
       with 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        after
      </span>
       text
    </div>
  </div>
</div>
`;

exports[`clueMap rendering 2`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      before 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        baz BOOM foo 
        <span
          class=""
          data-is-string="true"
        >
          BAM
        </span>
         
        <span
          data-hidden="true"
          role="button"
          tabindex="0"
        >
           not! 
        </span>
         fooey
      </span>
       with 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        after
      </span>
       text
    </div>
  </div>
</div>
`;

exports[`clueMap rendering 3`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      <span
        class=""
        data-is-string="true"
      >
        12ACLUE1
      </span>
       
      <span
        class=""
        data-is-string="true"
      >
        BAM
      </span>
    </div>
  </div>
</div>
`;

exports[`clueMap rendering 4`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        <span
          class=""
          data-is-string="true"
        >
          BAM
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`clueMap rendering 5`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      You got it!! Glad the clues pointed you in the right direction. That's what they're there for. Also, it was Brian's suggestion to include 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
         
        <span
          class=""
          data-is-string="true"
        >
          BAM
        </span>
         
      </span>
       which I think is such an awesome addition. Cheers!
    </div>
  </div>
</div>
`;

exports[`clueMap rendering 6`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      Reference 
      <span
        class=""
        data-is-string="true"
      >
        1A
      </span>
       and 
      <span
        class=""
        data-is-string="true"
      >
        2-D
      </span>
       and 
      <span
        class=""
        data-is-string="true"
      >
        1-Across
      </span>
       and 
      <span
        class=""
        data-is-string="true"
      >
        2Down
      </span>
       and unknown 
      11A
    </div>
  </div>
</div>
`;

exports[`clueMap rendering 7`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      Reference 
      <span
        class=""
        data-is-string="true"
      >
        1A
      </span>
      /
      <span
        class=""
        data-is-string="true"
      >
        2D
      </span>
      /
      11A
    </div>
  </div>
</div>
`;

exports[`images should not be allowed 1`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      !
      <a
        href="http://example.com/test.png"
        rel="nofollow ugc noopener noreferrer"
        target="_blank"
      />
    </div>
  </div>
</div>
`;

exports[`images should not be allowed 2`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      ![aaalt][1]\\n\\n[1]: 
      <a
        href="http://example.com/test.gif%5Cn%5Cn"
        rel="nofollow ugc noopener noreferrer"
        target="_blank"
      >
        http://example.com/test.gif\\n\\n
      </a>
    </div>
  </div>
</div>
`;

exports[`markdown preview mode 1`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      foo bar &gt;!baz
    </div>
  </div>
</div>
`;

exports[`markdown preview mode 2`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tellus ante, dictum feugiat luctus quis, gravida id nibh. Sed tortor sem, pulvinar ut lacus nec, ornare consectetur ligula. Nam suscipit posuere vulputate. Proin ultricies dictum viverra. Cras tincidunt nec nulla non convallis. Nullam eget arcu mattis sapien ultricies varius nec ac mi. Duis dictum justo est, id tempus mi vestibulum eget. Nam posuere, nibh quis pharetra condimentum, leo ante tempor nibh, vitae facilisis sem elit at tellus. Etiam in tellus sagittis, lacinia enim ut, maximus ipsum. Ut sit amet mi tellus. Nulla a aliquam quam, vitae ultricies metus.
    </div>
    

    <div
      class="paragraph"
    >
      Mauris elit metus, scelerisque in sollicitudin et, bibendum in nulla. Praesent ex sem, tempus quis diam id, lobortis tempor ante. Ut sit amet bibendum purus. Vestibulum vulputate commodo faucibus. Donec dictum id ex eu mattis. Praesent id neque quis purus varius scelerisque. Cras hendrerit metus sed faucibus vestibulum. Ut in elementum mauris. Aenean faucibus…
    </div>
  </div>
</div>
`;

exports[`markdown preview mode 3`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        Lorem 
        <strong>
          ipsum
        </strong>
         dolor sit amet, consectetur 
        <em>
          adipiscing
        </em>
         elit. Phasellus tellus ante, dictum feugiat…
      </span>
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 1`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      foo bar &gt;!baz
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 2`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      foo bar 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        baz
      </span>
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 3`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        baz foo bam ! &gt;&gt; fooey
      </span>
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 4`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        baz foo bam ! &gt;&gt; fooey
      </span>
       with after text
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 5`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      before 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        baz foo bam &gt;! fooey
      </span>
       with after text
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 6`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      before 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        baz foo bam || fooey
      </span>
       with after text
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 7`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      before 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        baz foo bam || fooey
      </span>
       with 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        after
      </span>
       text
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 8`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      before 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        baz foo bam 
        <span
          data-hidden="true"
          role="button"
          tabindex="0"
        >
           not! 
        </span>
         fooey
      </span>
       with 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        after
      </span>
       text
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 9`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      before ||baz foo bam
    </div>
    

    <div
      class="paragraph"
    >
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
         not! 
      </span>
       fooey|| with 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        after
      </span>
       text
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 10`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      before baz foo bam
    </div>
    

    <div
      class="paragraph"
    >
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
         not! 
      </span>
       fooey|| with 
      <span
        data-hidden="true"
        role="button"
        tabindex="0"
      >
        after
      </span>
       text
    </div>
  </div>
</div>
`;
